# hiddenlayer-openai-guardrails

./: .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CODING_GUIDELINES.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  python-tests.yml  scorecard.yml
specs.md/: interactions.md
src/hiddenlayer_openai_guardrails/: __init__.py  _analysis.py  _guardrails.py  _hiddenlayer.py  _normalize.py  _redaction.py  _streaming.py  _types.py  agents.py
tests/: hiddenlayer_aidr_pii_correct_nemotron_100unsafe.parquet  test_agents.py  test_agents_integration.py  test_agents_unit.py
